checkpoint create docker image via maven (via profile "docker") update spring application yaml to disable liquibase by default include postgres and liquibase deps in docker image add migration profile to enable liquibase migrations check for "migrate-only" profile to kill container immediately after startup. This is for the use-case where you just want to run liquibase migration but not run the actual connector. run docker_image after build try using filter to a specific branch unit tests for profile checking remove unused import
Signed-off-by: nhartner <nhartner@gmail.com>